# trajectory_prediction

./: .gitattributes  .gitignore
deploy/20260120_新的无路网图模型部署代码/make_so_v6/: CMakeLists.txt  deploy_3trajs.cpp  how_to_make_so.txt  lstm_predict_v1.cpp  lstm_predict_v1.h
deploy/20260120_新的无路网图模型部署代码/test_so_v6/: CMakeLists.txt  README.txt  deploy_3trajs.h  deploy_cfg.ini  lstm_predict_v1.h  network_lite_no_map_v1.ms  run_minimal.cpp  visualize_trajs.py
deploy/20260427/make_so/: CMakeLists.txt  deploy_3trajs.cpp  deploy_3trajs.h  how_to_make_so.txt  lstm_predict_v1.cpp  lstm_predict_v1.h
deploy/20260427/test_so/: CMakeLists.txt  README.txt  deploy_3trajs.h  deploy_cfg.ini  run_minimal.cpp  visualize_trajs.py
new_plan/: README.txt  requirements.txt
new_plan/common/: README.txt  context_schema.py  outlier_filter.py  scaler.py
new_plan/constraint_optimizer/: README.txt  config.yaml
new_plan/constraint_optimizer/code/train/: module.py
new_plan/constraint_optimizer/test_road_net/: README.txt  road_schema.py  synth_road.py  test_arc_projection_vectorized.py  test_projection.py
new_plan/fusion/: README.txt  config.yaml
new_plan/fusion/code/: _inspect_onnx.py  build.py  export_onnx.py  full_net_v2.py  test_onnx.py  test_pipeline.py  verify_gnn1_match.py  verify_gnn2_match.py  verify_round_trip.py
new_plan/fusion/eval_vis/run_test_20260427_020240/: inputs.txt  meta.txt  outputs.txt
new_plan/fusion/eval_vis/run_test_20260428_145315/: meta.txt  outputs.txt
new_plan/fusion/eval_vis/run_test_20260428_155006/: inputs.txt  meta.txt  outputs.txt
new_plan/fusion/eval_vis/run_test_20260429_003430/no_road/: inputs.txt  meta.txt  outputs.txt
new_plan/fusion/eval_vis/run_test_20260429_003430/with_road/: inputs.txt  meta.txt  outputs.txt
new_plan/fusion/eval_vis/run_test_no_road_20260428_161347/: inputs.txt  meta.txt  outputs.txt
new_plan/fusion/eval_vis/run_test_with_road_20260428_161351/: inputs.txt  meta.txt  outputs.txt
new_plan/fusion/eval_vis_onnx/run_test_20260429_024511/no_road/: diff.txt
new_plan/fusion/eval_vis_onnx/run_test_20260429_024511/with_road/: diff.txt
new_plan/gnn1/: README.txt  config.yaml
new_plan/gnn1/code/data/: cache_lstm1_preds.py  dataset.py  generate_data.py  visualize_data.py
new_plan/gnn1/code/train/: _verify_manual_attention.py  eval.py  loss.py  model.py  trainer.py
new_plan/gnn2/: README.txt  config.yaml
new_plan/gnn2/code/data/: dataset.py  generate_data.py  visualize_data.py
new_plan/gnn2/code/train/: _verify_manual_attention.py  eval.py  loss.py  model.py  trainer.py
new_plan/lstm1/: README.txt  config.yaml
new_plan/lstm1/code/data/: generate_trajs.py  traj_dataset.py  visualize_trajs.py
new_plan/lstm1/code/train/: eval.py  loss.py  model.py  trainer.py
new_plan/lstm1/data/processed/: scaler_posvel.npz
new_plan/lstm2/: README.txt  config.yaml
new_plan/lstm2/code/data/: dataset.py  diagnose_gnn1_ood.py  generate_trajs.py  labels.py  synth_roads.py  visualize_sample.py
new_plan/lstm2/code/train/: _verify_manual_attention.py  eval.py  loss.py  model.py  trainer.py
old_plan/203_prediction_intention_pytorch_v0/: config.yaml
old_plan/203_prediction_intention_pytorch_v0/code/data/: generate_trajs.py  traj_dataset.py
old_plan/203_prediction_intention_pytorch_v0/code/train/: eval_intent.py  intent_loss.py  intent_model.py  trainer_intent.py
old_plan/203_prediction_intention_pytorch_v0/data/processed/: scaler_intent_posvel.npz
old_plan/203_prediction_multi_pytorch_without_map_v0.2/: config.yaml  说明.txt
old_plan/203_prediction_multi_pytorch_without_map_v0.2/code/train/: eval.py  loss_mtp.py  model.py  trainer.py
old_plan/203_prediction_multi_pytorch_without_map_v0.2/data/processed/: scaler_posvel.npz
old_plan/Generate_traj/generate_traj_without_map/: synthetic_trajectory_generator.py  visualize_trajectories.py
old_plan/model_fusion_v0/: config_mean_std.yaml  export_full_net.py  full_net.py  test_fullnet_pytorch.py  说明.txt
old_plan/model_fusion_v0/test_onnx/: test_onnx.py
